--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "detect-json-indent",
-  "version": "0.0.0",
-  "description": "detect the indentation of stringified json",
-  "main": "index.js",
+  "license": "BSD-2-Clause", 
+  "name": "detect-json-indent", 
+  "repository": {
+    "url": "git://github.com/tmcw/detect-json-indent.git", 
+    "type": "git"
+  }, 
+  "author": "Tom MacWright", 
   "directories": {
     "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/tmcw/detect-json-indent.git"
-  },
+  }, 
+  "version": "0.0.0", 
+  "dependencies": {
+    "mocha": "~1.12.0", 
+    "expect.js": "~0.2.0"
+  }, 
   "scripts": {
     "test": "mocha -R spec"
-  },
+  }, 
   "keywords": [
-    "json",
-    "indent",
-    "space",
+    "json", 
+    "indent", 
+    "space", 
     "tab"
-  ],
-  "author": "Tom MacWright",
-  "license": "BSD",
-  "dependencies": {
-    "expect.js": "~0.2.0",
-    "mocha": "~1.12.0"
-  }
+  ], 
+  "main": "index.js", 
+  "description": "detect the indentation of stringified json"
 }
