--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "test"
   }, 
   "version": "0.0.0", 
-  "dependencies": {
+  "devDependencies": {
     "mocha": "~1.12.0", 
     "expect.js": "~0.2.0"
   }, 
